2012-01-18 Franz Holzinger  <franz@ttproducts.de>
	* fix bug #18019: Incorrect login URL code

2012-01-16 Franz Holzinger  <franz@ttproducts.de>
	* fix bug #18083: Parser error on eval() in getShortUrl()

2012-01-16 Franz Holzinger  <franz@ttproducts.de>
	* fix bug #18364: Initialize $prefixId in method tx_srfeuserregister_display::editForm

2012-01-13 Franz Holzinger  <franz@ttproducts.de>
	* fix bug #14416: Missing break in switch after preg

2012-01-13 Franz Holzinger  <franz@ttproducts.de>
	* fix bug #18343: replace deprecated t3lib_div::intInRange by t3lib_utility_Math::forceIntegerInRange
	* replace deprecated t3lib_div::testInt by t3lib_utility_Math::canBeInterpretedAsInteger

2011-11-24 Franz Holzinger  <franz@ttproducts.de>
	* fix bug: do not use the deprecated function t3lib_div::int_from_ver for TYPO3 4.6 and later

2011-11-16 Franz Holzinger  <franz@ttproducts.de>
	* fix bug: use the new method getLL_fh002 which supports TYPO3 4.6

2011-11-15 Franz Holzinger  <franz@ttproducts.de>
	* fix bug in implode for the field list of DBgetUpdate

2011-11-15 Franz Holzinger  <franz@ttproducts.de>
	* restructuring and CGL

2011-11-15 Franz Holzinger  <franz@ttproducts.de>
	* fix bug with TYPO3 4.6: use the getLL method tx_div2007_alpha5::getLL_fh002

2011-11-14 Franz Holzinger  <franz@ttproducts.de>
	* new feature: decide which user groups are selectable: allowedUserGroups, allowedSubgroups, deniedUserGroups and which must kept keepUnselectableUserGroups
	* fix bug: no requirement for tems_acknowledged by default

2011-10-04 Franz Holzinger  <franz@ttproducts.de>
	* new feature: add the field terms_acknowledged and a PDF file with the terms
	* fix bug: show an error text if there is not text for missing_<fieldname> found.

2011-09-08 Franz Holzinger  <franz@ttproducts.de>
	* issue #29523 (forge): improve the hook for the validation to use the error message generator

2011-09-05 Franz Holzinger  <franz@ttproducts.de>