@@ -4,7 +4,6 @@ Thomas Dubach <tom@etown.ch>: German translations
 Dennis S. Hennen <dennis@28studios.com>: generatePassword.
 Ralph Brugger <Ralph.Brugger@linkpool.de>: captcha feature
 Dirk Heitzmann <dirk.heitzmann@c-wd.de>: date formats
-Martin Kutschker <martin.kutschker@activesolution.at>: changes to label markers
 Pieter Verstraelen <pieter.v@gmx.net>: sharing his ideas and code to incorporate an additional hook to generate a username.
 Cornelia Lange http://www.clkm.de/: The extension includes two link icons authored by creator and copyright-owner
 Volker Graubaum <volker.graubaum@e-netconsulting.de>: The email attachment feature
@@ -18,7 +17,9 @@ Bernhard Kraft <kraftb@kraftb.at>: This extension incorporates some code taken f
 Steve Webster <steviewebsite@msn.com>: Sharing of his code for the short URL feature.
 David Bocher <david_bocher@yahoo.fr>: Sharing his code for honoring TCA renderMode property.
 Jens Hirschfeld <Jens.Hirschfeld@KeepOut.de>: Sharing of his code for strWrap to overrideValues.
-Martin Kutschker (Masi) http://activesolution.at/ from Austria: Sharing of his code for enhanced label markers 'v_...'.
+Martin Kutschker (Masi) http://activesolution.at/ from Austria: Sharing of his code for enhanced label markers 'v_...', changes to label markers
+Pierre Lamoureux: Improvements for security token
+
 
 
 
