@@ -19,7 +19,8 @@ CREATE TABLE fe_users (
 	comments text NOT NULL,
 	by_invitation tinyint(4) unsigned DEFAULT '0' NOT NULL,
 	module_sys_dmail_html tinyint(3) unsigned DEFAULT '0' NOT NULL,
-	terms_acknowledged tinyint(4) unsigned DEFAULT '0' NOT NULL
+	terms_acknowledged tinyint(4) unsigned DEFAULT '0' NOT NULL,
+	token varchar(32) DEFAULT '' NOT NULL
 );
 
 
