@@ -40,6 +40,7 @@
             <label index="fe_users.comments">Comments:</label>
             <label index="fe_users.by_invitation">Was invited:</label>
             <label index="fe_users.terms_acknowledged">The terms have been acknowledged:</label>
+            <label index="fe_users.token">Security Token</label>
             <label index="fe_groups_language_overlay">User Group Alternative Language</label>
             <label index="fe_groups_language_overlay.title">Translated user group name</label>
         </languageKey>
